update complete profile

--- a/src/app/modules/developer/Components/step-five/step-five.component.html
+++ b/src/app/modules/developer/Components/step-five/step-five.component.html
@@ -38,7 +38,7 @@
             <button class="btn btn-link" (click)="editSection('/developer/step-four')">Edit Information</button>
           </div>
           <button class="btn btn-secondary mt-3 ms-3" (click)="goToPreviousStep()">Back</button>
-          <button class="btn btn-primary mt-3 ms-3" (click)="submitProfile()" >Submit Profile</button>
+          <button class="btn btn-primary mt-3 ms-3" (click)="submitProfile()" routerLink="/home">Submit Profile</button>
         </div>
       </div>
     </div>
