--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -10,53 +10,84 @@
           <div class="card-body">
             <img src="logo 3_processed.jpg" class="card-image">
             <h3 class="text-center mb-4" style="font-family: Edu AU VIC WA NT Hand, cursive;font-optical-sizing: auto;font-style: normal;">Log in</h3>
-            <form (ngSubmit)="login()">
+            <form (ngSubmit)="login()" [formGroup]="form">
               <div class="form-group mb-3">
                 <label for="email">UserName or Email</label>
                 <br>
 
-                <input
+                <!-- <input
                   type="text"
                   class="form-control"
+                  formControlName="LoginMethod"
                   id="email"
                   [(ngModel)]="loginMethod"
                   [ngModelOptions]="{standalone: true}"
                   placeholder="Enter your UserName or Email"
                   required
-                />
+                /> -->
+                <input
+                type="text"
+                class="form-control"
+                formControlName="LoginMethod"
+                id="email"
+                placeholder="Enter your UserName or Email"
+                required
+              />
               </div>
-              <div class="form-group mb-3">
+              <!-- <div class="form-group mb-3">
                 <label for="password">Password</label>
                 <br>
                 <input
                   type="password"
+                  formControlName="Password"
                   [(ngModel)]="password"
                   [ngModelOptions]="{standalone: true}"
                   class="form-control"
                   id="password"
                   placeholder="Enter your password"
                   required
-                />
+                /> -->
+                <div class="form-group mb-3">
+                  <label for="password">Password</label>
+                  <br>
+                  <input
+                    type="password"
+                    formControlName="Password"
+                    class="form-control"
+                    id="password"
+                    placeholder="Enter your password"
+                    required
+                  />
 
                 <button type="button" class="btn btn-link position-absolute end-0 top-0 mt-2 me-3" (click)="togglePasswordVisibility()">
                   <i class="bi" [ngClass]="passwordVisible ? 'bi-eye-slash' : 'bi-eye'"></i>
                 </button>
+                
               </div>
 
 
               <!-- Remember Me checkbox -->
-              <div class="form-group form-check mb-3">
+              <!-- <div class="form-group form-check mb-3">
                 <input
                   type="checkbox"
-                  [(ngModel)]="rememberMe"
+                  formControlName="LoginMethod"
+                  [(ngModel)]="Rememberme"
                   [ngModelOptions]="{standalone: true}"
                   class="form-check-input"
                   id="rememberMe"
                 />
                 <label class="form-check-label" for="rememberMe">Remember me</label>
+              </div> -->
+              <div class="form-group form-check mb-3">
+                <input
+                  type="checkbox"
+                  formControlName="LoginMethod"
+                  class="form-check-input"
+                  id="rememberMe"
+                />
+                <label class="form-check-label" for="rememberMe">Remember me</label>
               </div>
-
-              <button type="submit" class="btn-custom mx-auto d-block">Login</button>
+              <button type="submit"  [disabled]="form.invalid"  class="btn-custom mx-auto d-block">Login</button>
             </form>
             <p *ngIf="successMessage" class="text-success text-center mt-3">{{ successMessage }}</p>
             <p *ngIf="errorMessage" class="text-danger text-center mt-3">{{ errorMessage }}</p>
