--- a/src/app/modules/developer/Components/step-three/step-three.component.html
+++ b/src/app/modules/developer/Components/step-three/step-three.component.html
@@ -1,116 +1,210 @@
-<div class="container mt-3">
+<!-- <div class="container mt-3">
   <div class="row justify-content-center">
     <div class="col-md-12">
       <div class="card custom-card">
         <div class="card-body">
           <h3 class="card-title">Education</h3>
           <form [formGroup]="stepThreeForm" (ngSubmit)="onNext()">
+
+    
             <div class="form-group">
               <label for="university">University / School</label>
               <input id="university" type="text" class="form-control" formControlName="university"
-                placeholder="University / School">
-              </div>
-              <!-- <div class="form-group">
-                <label for="country">Country</label>
-                <select id="country" class="form-control" formControlName="country">
-                  <option value="">Select your country</option>
-                  <option value="Afghanistan">Afghanistan</option>
-           
-                </select>
-              </div> -->
-              <div class="form-group">
-                <label for="country">Country of Residence</label>
-                <select id="country" class="form-control" formControlName="country">
-                  <option value="">Select your country</option>
-                  <option *ngFor="let country of countries" [value]="country.id">{{ country.name }}</option>
-                </select>
-                <div *ngIf="stepThreeForm.get('country')?.invalid && stepThreeForm.get('country')?.touched" class="text-danger">
-                  Country of residence is required
-                </div>
-              </div>  
-              <!-- <div class="form-group">
-                <label for="degree">Degree</label>
-                <select id="degree" class="form-control" formControlName="degree">
-                  <option value="">Select your degree</option>
-                  <option value="Doctorate">Doctorate (or equivalent)</option>
-                
-                </select>
-              </div> -->
-              <div class="form-group">
-                <label for="degree">Degree</label>
-                <select id="degree" class="form-control" formControlName="degree">
-                  <option value="">Select your degree</option>
-                  <option value="High School Diploma">High School Diploma</option>
-                  <option value="Associate Degree">Associate Degree</option>
-                  <option value="Bachelor's Degree">Bachelor's Degree</option>
-                  <option value="Master's Degree">Master's Degree</option>
-                  <option value="Doctorate">Doctorate (or equivalent)</option>
-                  <option value="Professional Degree">Professional Degree (e.g., JD, MD)</option>
-                  <option value="Postdoctoral Studies">Postdoctoral Studies</option>
-                </select>
-              </div>
-              
-              <div class="form-group">
-                <label for="fieldOfStudy">Field of study</label>
-                <input id="fieldOfStudy" type="text" class="form-control" formControlName="fieldOfStudy"
-                  placeholder="Field of study">
-                </div>
-                <!-- <div class="form-group">
-                  <label for="startDate">Start Date</label>
-                  <div class="d-flex">
-                    <select class="form-control mr-2" formControlName="startYear">
-                      <option value="">Year</option>
-                      <option value="2016">2016</option>
-                    
-                    </select>
-                    <select class="form-control" formControlName="startMonth">
-                      <option value="">Month</option>
-                      <option value="January">January</option>
-                      
-                    </select>
-                  </div>
-                </div> -->
-                <!-- <div class="form-group">
-                  <label for="endDate">End Date</label>
-                  <div class="d-flex">
-                    <select class="form-control mr-2" formControlName="endYear">
-                      <option value="">Year</option>
-                      <option value="2020">2020</option>
-                    
-                    </select>
-                    <select class="form-control" formControlName="endMonth">
-                      <option value="">Month</option>
-                      <option value="January">January</option>
-                    
-                    </select>
-                  </div>
-                  @if (stepThreeForm.get('endMonth')?.invalid && stepThreeForm.get('endMonth')?.touched) {
-                    <div
-                      class="text-danger">
-                      Please provide a valid month
-                    </div>
-                  }
-                </div> -->
-                <div class="form-group">
-                  <label for="startDate">Start Date</label>
-                  <input id="startDate" type="date" class="form-control" formControlName="startDate">
-                </div>
-                
-                <div class="form-group">
-                  <label for="endDate">End Date</label>
-                  <input id="endDate" type="date" class="form-control" formControlName="endDate">
-                </div>
-                
-                <div class="form-group form-check">
-                  <input type="checkbox" class="form-check-input" id="currentlyStudying"
-                    formControlName="currentlyStudying">
-                    <label class="form-check-label" for="currentlyStudying">Currently studying</label>
-                  </div>
-                  <button type="button" class="btn btn-secondary mt-3" (click)="goToPreviousStep()">Back</button>
-                  <button type="submit" class="btn btn-primary mt-3 ms-3" (click)="onNext()" [disabled]="stepThreeForm.invalid">Next</button>
-                </form>
+                placeholder="University / School ex.Assuit University">
+              <div *ngIf="stepThreeForm.get('university')?.invalid && stepThreeForm.get('university')?.touched"
+                class="text-danger">
+                University is required
               </div>
             </div>
-          </div>
+
+   
+            <div class="form-group">
+              <label for="faculty">Faculty</label>
+              <input id="faculty" type="text" class="form-control" formControlName="faculty"
+                placeholder="Computer Science">
+              <div *ngIf="stepThreeForm.get('faculty')?.invalid && stepThreeForm.get('faculty')?.touched"
+                class="text-danger">
+                Faculty is required
+              </div>
+            </div>
+
+     
+            <div class="form-group">
+              <label for="fieldOfStudy">Field of study</label>
+              <input id="fieldOfStudy" type="text" class="form-control" formControlName="fieldOfStudy" placeholder="CS">
+              <div *ngIf="stepThreeForm.get('fieldOfStudy')?.invalid && stepThreeForm.get('fieldOfStudy')?.touched"
+                class="text-danger">
+                Field of study is required
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="country">Country of Study</label>
+              <select id="country" class="form-control" formControlName="country">
+                <option value="">Select your country</option>
+                <option *ngFor="let country of countries" [value]="country.id">{{ country.name }}</option>
+              </select>
+              <div *ngIf="stepThreeForm.get('country')?.invalid && stepThreeForm.get('country')?.touched"
+                class="text-danger">
+                Country of residence is required
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="degree">Degree</label>
+              <select id="degree" class="form-control" formControlName="degree">
+                <option value="">Select your degree</option>
+                <option value="High School Diploma">High School Diploma</option>
+                <option value="Associate Degree">Associate Degree</option>
+                <option value="Bachelor's Degree">Bachelor's Degree</option>
+                <option value="Master's Degree">Master's Degree</option>
+                <option value="Doctorate">Doctorate (or equivalent)</option>
+                <option value="Professional Degree">Professional Degree (e.g., JD, MD)</option>
+                <option value="Postdoctoral Studies">Postdoctoral Studies</option>
+              </select>
+              <div *ngIf="stepThreeForm.get('degree')?.invalid && stepThreeForm.get('degree')?.touched"
+                class="text-danger">
+                Degree is required
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="startDate">Start Date</label>
+              <input id="startDate" type="date" class="form-control" formControlName="startDate">
+              <div *ngIf="stepThreeForm.get('startDate')?.invalid && stepThreeForm.get('startDate')?.touched"
+                class="text-danger">
+                Start date is required
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="endDate">End Date</label>
+              <input id="endDate" type="date" class="form-control" formControlName="endDate">
+              <div *ngIf="stepThreeForm.get('endDate')?.invalid && stepThreeForm.get('endDate')?.touched"
+                class="text-danger">
+                End date is required
+              </div>
+            </div>
+
+            <div class="form-group form-check">
+              <input type="checkbox" class="form-check-input" id="currentlyStudying"
+                formControlName="currentlyStudying">
+              <label class="form-check-label" for="currentlyStudying">Currently Studying</label>
+            </div>
+
+            <button type="button" class="btn btn-secondary mt-3" (click)="goToPreviousStep()">Back</button>
+            <button type="submit" class="btn btn-primary mt-3 ms-3" [disabled]="stepThreeForm.invalid">Next</button>
+
+          </form>
         </div>
       </div>
+    </div>
+  </div>
+</div> -->
+
+<div class="container mt-3">
+  <div class="row justify-content-center">
+    <div class="col-md-12">
+      <div class="card custom-card">
+        <div class="card-body">
+          <h3 class="card-title">Education</h3>
+          <form [formGroup]="formArray" (ngSubmit)="onNext()">
+            <div formArrayName="educations">
+              <div *ngFor="let education of educations.controls; let i = index" [formGroupName]="i" class="mb-3">
+                
+                <!-- University -->
+                <div class="form-group">
+                  <label for="university-{{i}}">University / School</label>
+                  <input id="university-{{i}}" type="text" class="form-control" formControlName="university" placeholder="University / School ex.Assuit University">
+                  <div *ngIf="education.get('university')?.invalid && education.get('university')?.touched" class="text-danger">
+                    University is required
+                  </div>
+                </div>
+
+                <!-- Faculty -->
+                <div class="form-group">
+                  <label for="faculty-{{i}}">Faculty</label>
+                  <input id="faculty-{{i}}" type="text" class="form-control" formControlName="faculty" placeholder="Computer Science">
+                  <div *ngIf="education.get('faculty')?.invalid && education.get('faculty')?.touched" class="text-danger">
+                    Faculty is required
+                  </div>
+                </div>
+
+                <!-- Field of Study -->
+                <div class="form-group">
+                  <label for="fieldOfStudy-{{i}}">Field of study</label>
+                  <input id="fieldOfStudy-{{i}}" type="text" class="form-control" formControlName="fieldOfStudy" placeholder="CS">
+                  <div *ngIf="education.get('fieldOfStudy')?.invalid && education.get('fieldOfStudy')?.touched" class="text-danger">
+                    Field of study is required
+                  </div>
+                </div>
+
+                <!-- Country -->
+                <div class="form-group">
+                  <label for="country-{{i}}">Country of Study</label>
+                  <select id="country-{{i}}" class="form-control" formControlName="country">
+                    <option value="">Select your country</option>
+                    <option *ngFor="let country of countries" [value]="country.id">{{ country.name }}</option>
+                  </select>
+                  <div *ngIf="education.get('country')?.invalid && education.get('country')?.touched" class="text-danger">
+                    Country of residence is required
+                  </div>
+                </div>
+
+                <!-- Degree -->
+                <div class="form-group">
+                  <label for="degree-{{i}}">Degree</label>
+                  <select id="degree-{{i}}" class="form-control" formControlName="degree">
+                    <option value="">Select your degree</option>
+                    <option value="High School Diploma">High School Diploma</option>
+                    <option value="Associate Degree">Associate Degree</option>
+                    <option value="Bachelor's Degree">Bachelor's Degree</option>
+                    <option value="Master's Degree">Master's Degree</option>
+                    <option value="Doctorate">Doctorate (or equivalent)</option>
+                    <option value="Professional Degree">Professional Degree (e.g., JD, MD)</option>
+                    <option value="Postdoctoral Studies">Postdoctoral Studies</option>
+                  </select>
+                  <div *ngIf="education.get('degree')?.invalid && education.get('degree')?.touched" class="text-danger">
+                    Degree is required
+                  </div>
+                </div>
+
+                <!-- Start Date -->
+                <div class="form-group">
+                  <label for="startDate-{{i}}">Start Date</label>
+                  <input id="startDate-{{i}}" type="date" class="form-control" formControlName="startDate">
+                  <div *ngIf="education.get('startDate')?.invalid && education.get('startDate')?.touched" class="text-danger">
+                    Start date is required
+                  </div>
+                </div>
+
+                <!-- End Date -->
+                <div class="form-group">
+                  <label for="endDate-{{i}}">End Date</label>
+                  <input id="endDate-{{i}}" type="date" class="form-control" formControlName="endDate">
+                  <div *ngIf="education.get('endDate')?.invalid && education.get('endDate')?.touched" class="text-danger">
+                    End date is required
+                  </div>
+                </div>
+
+                <!-- Currently Studying Checkbox -->
+                <div class="form-group form-check">
+                  <input type="checkbox" class="form-check-input" id="currentlyStudying-{{i}}" formControlName="currentlyStudying">
+                  <label class="form-check-label" for="currentlyStudying-{{i}}">Currently Studying</label>
+                </div>
+
+                <hr />
+              </div>
+            </div>
+
+           <div class="row justify-content-between">
+             <button type="button" class="btn btn-secondary mt-3 ms-3  col-2" (click)="goToPreviousStep()">Back</button>
+             <button type="submit" class="btn btn-primary mt-3 ms-3 col-2" [disabled]="formArray.invalid">Next</button>
+             <button type="button" class="btn btn-primary mt-3 me-3  col-6" (click)="addEducation()"  title="Click to add another education entry">+</button>
+           </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
