--- a/src/app/modules/developer/Components/step-four/step-four.component.html
+++ b/src/app/modules/developer/Components/step-four/step-four.component.html
@@ -4,25 +4,38 @@
       <div class="card custom-card">
         <div class="card-body">
           <h3 class="card-title">Technical skills</h3>
-          <form [formGroup]="stepFourForm" (ngSubmit)="onNext()">
+          <form >
             <div class="form-group">
               <label for="experience">Years of work experience</label>
-              <input type="number" id="experience" class="form-control" formControlName="experience">
-              <div *ngIf="experienceControl?.invalid && experienceControl?.touched" class="text-danger">
-                <div *ngIf="experienceControl?.invalid">Experience is required.</div>
-                <!-- <div *ngIf="experienceControl?.errors?.min">Experience must be a non-negative number.</div> -->
+              <input type="number" name="experience" class="form-control" [(ngModel)]="YearsOfExperience">
+              <div *ngIf="YearsOfExperience<0" class="text-danger">
+                Experience is required.
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="level">Level</label>
+              <input type="text" name="level" class="form-control" [(ngModel)]="Level">
+              <div *ngIf="Level==''" class="text-danger">
+                Level is required.
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="about">Give me Overiew about You</label>
+              <textarea  name="about" class="form-control" [(ngModel)]="About"></textarea>
+              <div *ngIf="About==''" class="text-danger">
+                About is required.
               </div>
             </div>
 
             <div class="skill-selector">
               <div class="selected-skills">
-                <span class="skill-tag" *ngFor="let skill of selectedSkillsArray.controls; let i = index">
+                <span class="skill-tag" *ngFor="let skill of SelectedSkilles; let i = index">
                   {{skill.value}}
                   <span class="remove-skill" (click)="removeSkill(skill.value)">&#10005;</span>
                 </span>
               </div>
 
-              <input type="search" #searchInput (input)="onSearchInputChange(searchInput.value)"
+              <input name="search" type="search" #searchInput (input)="onSearchInputChange(searchInput.value)"
               [value]="searchQuery" class="form-control form-control-sm" placeholder="Search skills..." />
 
               <h6>Suggested Skills</h6>
@@ -33,7 +46,7 @@
               </div>
             </div>
 
-            <div *ngIf="selectedSkillsControl?.invalid && selectedSkillsControl?.touched" class="text-danger">
+            <div *ngIf="SelectedSkilles.length<1" class="text-danger">
               Please select at least one skill.
             </div>
 
@@ -41,42 +54,42 @@
               <div class="col-md-12">
                 <div class="card-body">
                   <h3 class="card-title">Experience</h3>
-                  <div formArrayName="experiences">
-                    <div *ngFor="let exp of experiences.controls; let i = index" [formGroupName]="i" class="mb-3">
+                  <div>
+                    <div *ngFor="let exp of Experiencees; let i = index" class="mb-3">
                       <div class="form-group">
                         <label for="organization-{{i}}">Organization </label>
-                        <input id="organization-{{i}}" type="text" class="form-control" formControlName="organization" placeholder="Organization">
-                        <div *ngIf="exp.get('organization')?.invalid && exp.get('organization')?.touched" class="text-danger">
+                        <input name="organization-{{i}}" type="text" class="form-control" [(ngModel)]="Experiencees[i].Organization" placeholder="Organization">
+                        <div *ngIf="Experiencees[i].Organization==''" class="text-danger">
                           Organization is required
                         </div>
                       </div>
 
                       <div class="form-group">
                         <label for="field-{{i}}">Field</label>
-                        <input id="field-{{i}}" type="text" class="form-control" formControlName="field" placeholder="CS">
-                        <div *ngIf="exp.get('field')?.invalid && exp.get('field')?.touched" class="text-danger">
+                        <input name="field-{{i}}" type="text" class="form-control" [(ngModel)]="Experiencees[i].FieldOfStudy" placeholder="CS">
+                        <div *ngIf="Experiencees[i].Organization==''" class="text-danger">
                           Field is required
                         </div>
                       </div>
 
                       <div class="form-group">
                         <label for="startDate-{{i}}">Start Date</label>
-                        <input id="startDate-{{i}}" type="date" class="form-control" formControlName="startDate">
-                        <div *ngIf="exp.get('startDate')?.invalid && exp.get('startDate')?.touched" class="text-danger">
+                        <input name="startDate-{{i}}" type="date" class="form-control" [(ngModel)]="Experiencees[i].StartDate">
+                        <div *ngIf="Experiencees[i].StartDate.toString()==''" class="text-danger">
                           Start date is required
                         </div>
                       </div>
 
                       <div class="form-group">
                         <label for="endDate-{{i}}">End Date</label>
-                        <input id="endDate-{{i}}" type="date" class="form-control" formControlName="endDate">
-                        <div *ngIf="exp.get('endDate')?.invalid && exp.get('endDate')?.touched" class="text-danger">
+                        <input name="endDate-{{i}}" type="date" class="form-control"[(ngModel)]="Experiencees[i].EndDate">
+                        <div *ngIf="Experiencees[i].EndDate?.toString()" class="text-danger">
                           End date is required
                         </div>
                       </div>
 
                       <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" id="tillnow-{{i}}" formControlName="tillnow">
+                        <input type="checkbox" class="form-check-input" id="tillnow-{{i}}" [(ngModel)]="Experiencees[i].TillNow">
                         <label class="form-check-label" for="tillnow-{{i}}">Till Now</label>
                       </div>
 
@@ -90,7 +103,7 @@
             </div>
 
             <button type="button" class="btn btn-secondary mt-3" (click)="goToPreviousStep()">Back</button>
-            <button type="submit" class="btn btn-primary mt-3 ms-3" [disabled]="stepFourForm.invalid">Next</button>
+            <button type="submit" class="btn btn-primary mt-3 ms-3" [disabled]="">Next</button>
           </form>
         </div>
       </div>
