--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -56,11 +56,15 @@
           <a class="nav-link" routerLink="/developer/hr">HR</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/developer/Quizzes">Quizzes</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link " routerLink="/developer/aboutus">About Us</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/developer/contactus">Contact Us</a>
         </li>
+
         @if(!isuserExist)
         {
           <li class="nav-item d-lg-none d-block"><a class="nav-link" routerLink="/developer/login">Login</a></li>
