--- a/src/app/shared/components/navbar/navbar.component.css
+++ b/src/app/shared/components/navbar/navbar.component.css
@@ -6,6 +6,7 @@ nav {
   z-index: 1000;
   background-color: rgb(255, 255, 255);
   height: 10vh;
+  border: 2px solid #415bcf ;
 }
 
 .nav-link, .active, .navbar-brand {
